5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1692_1879.log
== TEST (2019-04-26 20:49:40) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	print(he,"extras e", hf "de falta")
	print(round(g,2))

	
	
	elif(h<=400):
	g=100.00
	

-- ERROR:
File "XXXX", line 8
    print(he,"extras e", hf "de falta")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:49:55) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))

	
	
	elif(h<=400):
	g=100.00
	

-- ERROR:
File "XXXX", line 13
    elif(h<=400):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:50:10) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))

elif(h<=400):
	g=100.00
	
	

-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:50:38) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))

elif(h<=400):
	g=100.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))
	
	

-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:50:40) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))

elif(h<=400):
	g=100.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))
	
	

-- EXECUTION TIME:
0.15978
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:51:20) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	g=round(g,2)
	print(he,"extras e", hf ,"de falta")
	

elif(h<=400):
	g=100.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))
	
	

-- OUTPUT:
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:51:59) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	g=round(g,2)
	print(he,"extras e", hf ,"de falta")
	print("R$", g)
	

elif(h<=400):
	g=100.00
	print(he,"extras e", hf ,"de falta")
	print(round(g,2))
	
	

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:52:34) 
-- CODE:
he=float(input("he"))
hf=float(input("hf"))

h=(he)-(1/4*(hf))

if(h>400):
	g=500.00
	g=round(g,2)
	print(he,"extras e", hf ,"de falta")
	print("R$", g)
	

elif(h<=400):
	g=100.00
	g=round(g,2)
	print(he,"extras e", hf ,"de falta")
	print("R$",g)
	
	

-- EXECUTION TIME:
0.144852
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
